syntax="proto3";
package proto;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option go_package="./;proto";

service AssignmentPangkalan{
    rpc AssignFleetTerminal (AssignFleetRequest) returns (AssignFleetResponse);
    rpc GetListFleetTerminal (GetListFleetTerminalReq) returns (GetListFleetTerminalResp);
    rpc Stock(StockRequest) returns (StockResponse);
    rpc RequestTaxi(RequestTaxiRequest) returns (RequestTaxiResponse);
    rpc GetSubLocationStockCount(StockCountRequest) returns (StockCountResponse);
    rpc GetRequestSublocations (RequestSublocation) returns (ResponseSubLocation);
    rpc PangkalanStockValidator(StockValidatorRequest) returns (StockValidatorResponse);
    rpc UpdateLocationStockAggregator (google.protobuf.Empty) returns (UpdateStockAggregatorResp);
    rpc SearchStock(SearchStockRequest) returns (SearchStockResponse);
    rpc GetStatusDriverInStock(RequestGetStatusDriver) returns (ResponseGetStatusDriver);
}

enum StockType {
    IN = 0;
    OUT= 1;
}

// [BDO 367] StockValidatorRequest...
message StockValidatorRequest {
	string taxi_no = 1;
}
message StockValidatorResponse {
	bool is_available = 1;
	string	taxi_no = 2;
	string location_name = 3;
}

// [BDO 160] AssignFleetItems ....
message AssignFleetItems {
    int64 stock_id =1;
}
// [BDO 104] Assign fleet to terminal
message AssignFleetRequest {
    int64   location_id =1;
    int64   assign_location=2;
    repeated AssignFleetItems assign_fleet = 3;
    bool    with_passenger = 4;
}

message AssignFleetResponse {
    string message = 1;
    int64  total_assigned_fleet=2;
}

// [BDO 117] Get Terminal Stock
message GetListFleetTerminalReq {
    int64 sub_location=1;
    int32 page=2;
    int32 item_perPage=3;
}

message FleetItems {
    int64  fleet_id = 1;
    string taxi_no  = 2;
    string created_at =3;
    string status = 4;
}

message GetListFleetTerminalResp {
    repeated FleetItems fleet_list =1;
}

// [BDO 172] StockItems
message DepartFleetItems {
    int64 stock_id = 1;
}
message StockRequest {
    int64  sub_location_id=1;
    string taxi_no = 2;
    int64  is_with_passenger=3;
    repeated DepartFleetItems depart_fleet_items=4;
    StockType stock_type = 5;
    int64 location_id = 6;
    bool is_arrived = 7;
    string queue_number = 8;
}

// item for dump 
// fleet number and stock id after press 'sampai button'
message ArrivedItem {
    int64 stock_id = 1;
    string taxi_no = 2;
    string created_at = 3;
}

message StockResponse {
    string message = 1;
    repeated string taxi_no = 2;
    string stock_type=3;
    int64  stock_id = 4;
    string created_at = 5;
    repeated ArrivedItem arrived_fleet = 6;
}

// [122] RequestTaxiRequest ...
message RequestTaxiRequest {
    int64 request_from = 1;
    int64 location_id = 2;
    int64  count = 3;
}

// [122] RequestTaxiResponse ...
message RequestTaxiResponse {
    string message = 1;
    int64 request_from = 2;
    string created_at = 3;
    int64 request_count = 4;
}

// [BDO 123]
message StockCountRequest {
    int64 sub_location_id = 1;
    int64 location_id = 2;
    google.protobuf.Timestamp created_at = 3;
}

message StockCountResponse {
    int64 stock=1;
    int64 request=2;
    int64 ritase=3;
}

// [BDO 151] GetCountRequestPerSubLocation

message CountSubLocationItems {
    string sub_location_name = 1;
    int64  count = 2;
    int64  sub_location_id = 3;
    bool   with_passenger = 4;
}

message RequestSublocation {
    int64 location_id = 1;
}

message ResponseSubLocation {
    string location_name = 1;
    int64  location_id = 2;
    repeated CountSubLocationItems sub_location_items = 3;
}

// [BDO 376] UpdateStockAggregatorReq....
message UpdateStockAggregatorResp {
	string message = 1;
}

// BDO 437....
message Paging {
    int32 page = 1;
    int32 item_per_page = 2;
}

message SearchStockRequest {
	string fleet_number = 1;
	int64  sub_location_id = 2;
	Paging paging = 3;
}
message SearchStockResponse {
	int64 total = 1;
	repeated ArrivedItem fleets = 2;
}

// BDO 477 GetStatusDriver...
message RequestGetStatusDriver {
    string taxi_no = 1;
}
message ResponseGetStatusDriver {
    bool is_queue = 1;
}